--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="assets/images/Logo.png">
+    <link rel="icon" type="image/png" href="images/Logo.png">
 </head>
 <body>
     <!-- Header / Navegação -->
     <header>
         <div class="container">
             <div class="logo">
-                <img src="assets/images/logo.png" alt="Dr. Charles Clínica Odontológica">
+                <img src="images/Logo.png" alt="Dr. Charles Clínica Odontológica">
             </div>
             <nav>
                 <ul>
