--- a/blog.html
+++ b/blog.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Dr. Charles Clínica Odontológica</title>
     <meta name="description" content="Blog da Dr. Charles Clínica Odontológica com dicas de saúde bucal, tratamentos e cuidados dentários.">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Font Awesome para ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="assets/images/Logo.png">
+    <link rel="icon" type="image/png" href="images/Logo.png">
 </head>
 <body>
     <!-- Header / Navegação -->
     <header>
         <div class="container">
             <div class="logo">
-                <img src="assets/images/logo.png" alt="Dr. Charles Clínica Odontológica">
+                <img src="images/Logo.png" alt="Dr. Charles Clínica Odontológica">
             </div>
             <nav>
                 <ul>
@@ -314,6 +314,6 @@
         </div>
     </footer>
 
-    <script src="assets/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
