--- a/equipe.html
+++ b/equipe.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nossa Equipe - Dr. Charles Clínica Odontológica</title>
     <meta name="description" content="Conheça a equipe de profissionais qualificados da Clínica Odontológica Dr. Charles.">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Font Awesome para ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Fonts -->
@@ -15,14 +15,14 @@
     <!-- Defer Font Awesome -->
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"></noscript>
-    <link rel="icon" type="image/png" href="assets/images/Logo.png">
+    <link rel="icon" type="image/png" href="images/Logo.png">
 </head>
 <body>
     <!-- Header / Navegação -->
     <header>
         <div class="container">
             <div class="logo">
-                <img src="assets/images/Logo.png" alt="Dr. Charles Clínica Odontológica">
+                <img src="images/Logo.png" alt="Dr. Charles Clínica Odontológica">
             </div>
             <nav>
                 <ul>
@@ -74,7 +74,7 @@
                 <!-- Dr. Charles -->
                 <div class="team-card fade-in">
                     <div class="team-image">
-                        <img data-src="assets/images/Dr Charles.jpg" alt="Dr. Charles" class="lazy" loading="lazy">
+                        <img data-src="images/Dr Charles.jpg" alt="Dr. Charles" class="lazy" loading="lazy">
                         <div class="team-overlay">
                             <div class="team-social">
                                 <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -106,7 +106,7 @@
                 <!-- Dra. Maria -->
                 <div class="team-card fade-in">
                     <div class="team-image">
-                        <img data-src="assets/images/Dra Maria.jpg" alt="Dra. Maria" class="lazy" loading="lazy">
+                        <img data-src="images/Dra Maria.jpg" alt="Dra. Maria" class="lazy" loading="lazy">
                         <div class="team-overlay">
                             <div class="team-social">
                                 <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -138,7 +138,7 @@
                 <!-- Dr. João -->
                 <div class="team-card fade-in">
                     <div class="team-image">
-                        <img data-src="assets/images/Dr João.jpg" alt="Dr. João" class="lazy" loading="lazy">
+                        <img data-src="images/Dr João.jpg" alt="Dr. João" class="lazy" loading="lazy">
                         <div class="team-overlay">
                             <div class="team-social">
                                 <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -170,7 +170,7 @@
                 <!-- Dra. Ana -->
                 <div class="team-card fade-in">
                     <div class="team-image">
-                        <img data-src="assets/images/Dra Ana.jpg" alt="Dra. Ana" class="lazy" loading="lazy">
+                        <img data-src="images/Dra Ana.jpg" alt="Dra. Ana" class="lazy" loading="lazy">
                         <div class="team-overlay">
                             <div class="team-social">
                                 <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -254,7 +254,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="assets/images/Logo.png" alt="Dr. Charles Clínica Odontológica">
+                    <img src="images/Logo.png" alt="Dr. Charles Clínica Odontológica">
                     <p>Excelência em saúde bucal</p>
                 </div>
                 <div class="footer-contact">
@@ -283,6 +283,6 @@
         </div>
     </footer>
 
-    <script src="assets/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
