--- a/contato.html
+++ b/contato.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Dr. Charles Clínica Odontológica</title>
     <meta name="description" content="Entre em contato com a Clínica Dr. Charles. Agende sua consulta, tire suas dúvidas e conheça nossa localização.">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Font Awesome para ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="assets/images/Logo.png">
+    <link rel="icon" type="image/png" href="images/Logo.png">
 </head>
 <body>
     <!-- Header / Navegação -->
     <header>
         <div class="container">
             <div class="logo">
-                <img src="assets/images/Logo.png" alt="Dr. Charles Clínica Odontológica">
+                <img src="images/Logo.png" alt="Dr. Charles Clínica Odontológica">
             </div>
             <nav>
                 <ul>
@@ -272,7 +272,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="assets/images/Logo.png" alt="Dr. Charles Clínica Odontológica">
+                    <img src="images/Logo.png" alt="Dr. Charles Clínica Odontológica">
                     <p>Excelência em saúde bucal</p>
                 </div>
                 <div class="footer-contact">
@@ -301,7 +301,7 @@
         </div>
     </footer>
 
-    <script src="assets/js/main.js"></script>
+    <script src="js/main.js"></script>
     <script>
         // Validação do formulário de contato
         document.getElementById('contactForm').addEventListener('submit', function(e) {
