--- a/agendamento.html
+++ b/agendamento.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agendamento - Dr. Charles Clínica Odontológica</title>
     <meta name="description" content="Agende sua consulta na Clínica Dr. Charles - Odontologia de excelência com atendimento humanizado">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Font Awesome para ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Fonts -->
@@ -17,7 +17,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="assets/images/Logo.png" alt="Dr. Charles Clínica Odontológica">
+                <img src="images/Logo.png" alt="Dr. Charles Clínica Odontológica">
             </div>
             <nav>
                 <ul>
@@ -342,7 +342,7 @@
         </div>
     </footer>
 
-    <script src="assets/js/main.js"></script>
+    <script src="js/main.js"></script>
     <script>
         // WhatsApp Integration
         function openWhatsApp() {
