--- a/sobre.html
+++ b/sobre.html
@@ -67,7 +67,7 @@
                     <p>Ao longo dos anos, nossa clínica cresceu e se modernizou, sempre mantendo o compromisso com a qualidade e o bem-estar dos pacientes. Hoje, contamos com uma equipe multidisciplinar de profissionais altamente qualificados e tecnologia de ponta para oferecer os melhores tratamentos odontológicos.</p>
                 </div>
                 <div class="about-image fade-in">
-                    <img src="assets/images/Foto Clinica 2.jpg" alt="História da Clínica Dr. Charles">
+                    <img src="images/Foto Clinica.jpg" alt="História da Clínica Dr. Charles">
                 </div>
             </div>
         </div>
