--- a/agendamento.html
+++ b/agendamento.html
@@ -313,7 +313,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="assets/images/Logo.png" alt="Dr. Charles Clínica Odontológica">
+                    <img src="images/Logo.png" alt="Dr. Charles Clínica Odontológica">
                     <p>Excelência em saúde bucal</p>
                 </div>
                 <div class="footer-contact">
